--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -43,7 +43,7 @@
       width: 60px;
       border-top-left-radius: 4.4em;
       border-bottom-left-radius: 4.4em;
-      box-shadow: black 0 0 10px 0;
+      box-shadow: rgba(#232323, .35) 0 0 16px 0;
       &.close {
         width: 60px;
       }
@@ -53,6 +53,7 @@
       li {
         flex: 1 0 0;
         //background-color: chartreuse;
+        background-color:rgba(#232323, .10);
         a {
           text-transform: uppercase;
           display: block;
@@ -60,11 +61,22 @@
           line-height: 60px;
           font-size: 2.4em;
           font-weight: bold;
-          padding-left: 10px;
           width: 60px;
           height: 60px;
           &.language-selector-default {
-            color: #f45d48;
+            padding-left: 6px;
+            color: #F45D48;
+            background-color: white;
+          }
+          &.language-selector-us, &.language-selector-fr, &.language-selector-es {
+            color: rgba(0,0,0,.5);
+            font-size: 1.8em;
+            border-radius: 100%;
+            background-color: white;
+            box-shadow: inset 0 0 2px 10px rgba(#232323, .10);
+            &:hover {
+              color: #078080;
+            }
           }
         }
       }
