--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,23 +3,24 @@
   
   h1 {
     font-size: 3.4em;
+    color: #232323;
+    margin-bottom: 1em;
   }
   
   h2{
     font-size: 2.6em;
+    color: #232323;
+    margin-bottom: .5em;
   }
   
   h3 {
-    font-size: 2.2em;
+    font-size: 1.8em;
+    color: rgba(35,35,35,.8);
+    margin-bottom: .3em;
   }
 
   h1, h2, h3 {
     font-weight: bold;
-  }
-  
-  h1, h2, h3 {
-    margin-bottom: 1em;
-    color: #232323;
   }
 
   header {
@@ -44,6 +45,7 @@
       border-top-left-radius: 4.4em;
       border-bottom-left-radius: 4.4em;
       box-shadow: rgba(#232323, .35) 0 0 16px 0;
+      transition: width .5s ease-in-out;
       &.close {
         width: 60px;
       }
